--- a/src/pages/FibersCompare/FibersCompare.scss
+++ b/src/pages/FibersCompare/FibersCompare.scss
@@ -1,6 +1,8 @@
 @use '/src/assets/css/variables' as *;
 $col_first: 200px;
 $col_other: 130px;
+$k_sm: 0.85;
+$k_xs: 0.65;
 
 .page_compare {
     
@@ -9,7 +11,15 @@ $col_other: 130px;
         width: 100%;
         margin-left: auto;
         margin-right: auto;
+
+        @include respond-to(sm) {
+            padding: 20px;
+        }
     
+        @include respond-to(xs) {
+            padding: 10px;
+        }
+
     
         & .table__container {
             margin-top: 50px;
@@ -26,9 +36,20 @@ $col_other: 130px;
                 overflow: auto;
                 //max-width: 100%;
                 display: grid;
-                grid-template-rows: 190px repeat(23, auto) 70px;
-                grid-template-columns: $col_first repeat(auto-fit, $col_other);
                 grid-auto-flow: column;
+                grid-template-rows: 200px repeat(22, auto) 70px;
+                grid-template-columns: $col_first repeat(auto-fit, $col_other);
+
+                
+                @include respond-to(sm) {
+                    grid-template-rows: 170px repeat(22, auto) 70px;
+                    grid-template-columns: $col_first*$k_sm*0.65 repeat(auto-fit, $col_other*$k_sm);
+                }
+                
+                @include respond-to(xs) {
+                    grid-template-rows: 150px repeat(22, auto) 70px;
+                    grid-template-columns: $col_first*$k_xs*0.75 repeat(auto-fit, $col_other*$k_xs);
+                }
 
 
                 .cell {
@@ -46,13 +67,37 @@ $col_other: 130px;
                     background-color: var(--bg);
                     transition: background-color $transition-theme, border $transition_theme;
 
+                    @include respond-to(sm) {
+                        padding: 10px;
+                        width: $col_other*$k_sm;
+                    }
+
+                    @include respond-to(xs) {
+                        padding: 7px;
+                        width: $col_other*$k_xs;
+                    }
+
                     & > .img__container {
                         width: 100%;
                         height: 70px;
+
+                        @include respond-to(sm) {
+                            height: 50px;
+                        }
                         
                         & > span {
                             color: var(--text);
                             font-weight: 700;
+                            font-size: 18px;
+
+                            @include respond-to(sm) {
+                                font-size: 16px;
+                            }
+
+                            @include respond-to(xs) {
+                                font-weight: 600;
+                                font-size: 13px;
+                            }
                         }
                         
                         & > img {
@@ -67,18 +112,42 @@ $col_other: 130px;
                         padding: 5px 10px;
                         margin-left: auto;
                         margin-right: auto;
+
+                        @include respond-to(sm) {
+                            padding-left: 7px;
+                            padding-right: 7px;
+                            font-size: 12px;
+                        }
+
+                        @include respond-to(xs) {
+                            padding-left: 5px;
+                            padding-right: 5px;
+                            font-size: 10px;
+                            font-weight: 400;
+                        }
                     }
 
                     & > span {
                         color: var(--text);
                         font-weight: 600;
-                        
+                        font-size: 18px;
+
+                        @include respond-to(sm) {
+                            font-size: 16px;
+                        }
+
+                        @include respond-to(xs) {
+                            font-size: 13px;
+                            font-weight: 400;
+                        }
+
                         & > span {
                             font-size: .8em;
                             color: var(--text_mild);
-                            
-                            & > sup {
-                                color: var(--text_mild);
+
+                            @include respond-to(xs) {
+                                font-weight: 400;
+   
                             }
                         }
                     }
@@ -93,6 +162,15 @@ $col_other: 130px;
                             right: 0;
                             background-color: var(--border_compare);
                             transition: background-color $transition_theme;
+
+                            @include respond-to(sm) {
+                                height: 15px;
+                                width: 15px;
+                            }
+    
+                            @include respond-to(xs) {
+                                display: none;
+                            }
 
                             & > svg {
                                 padding: 4px;
@@ -198,11 +276,31 @@ $col_other: 130px;
                         text-align: left;
                         font-weight: 700;
                         font-size: 18px;
+                        
+                        @include respond-to(sm) {
+                            font-size: 16px;
+                        }
+
+                        @include respond-to(xs) {
+                            font-size: 14px;
+                        }
                     }
                 }
 
                 .padding_no {
                     padding: 0;
+
+                    & > a {
+                        @include respond-to(sm) {
+                            padding: 5px;
+                            padding-right: 20px;
+                        }
+
+                        @include respond-to(xs) {
+                            padding: 5px;
+                            padding-right: 10px;
+                        }
+                    }
                 }
 
                 & .selectors {
@@ -265,6 +363,13 @@ $col_other: 130px;
                     width: 20px;
                     height: auto;
 
+                    @include respond-to(sm) {
+                        width: 15px;
+                    }
+
+                    @include respond-to(xs) {
+                        width: 12px;
+                    }
                 }
             }
         }
