--- a/src/components/LangSwitcher/langSwitcher.scss
+++ b/src/components/LangSwitcher/langSwitcher.scss
@@ -18,7 +18,7 @@ $transition_lang: cubic-bezier(0.51, 0.06, 0.56, 1.37) .2s;
     height: $lang-height;
     border-radius: 20px;
     left: 20px;
-    top: 100px;
+    top: 155px;
     display: flex;
     justify-content: space-between;
     padding-left: calc($lang-height - $blob-size_big);
@@ -28,7 +28,7 @@ $transition_lang: cubic-bezier(0.51, 0.06, 0.56, 1.37) .2s;
     background-color: var(--main);
     font-weight: 700;
     z-index: 5500;
-    transition: background-color $transition_theme, left $nav_mobile_delay $transition_nav, opacity $nav_mobile_delay $transition_nav;
+    transition: background-color $transition_theme, left $nav_mobile_delay, opacity $nav_mobile_delay;
 
     
     @include respond-to(sm) {
@@ -36,13 +36,20 @@ $transition_lang: cubic-bezier(0.51, 0.06, 0.56, 1.37) .2s;
         top: 600px;
         left: 25%;
         top: calc($header_height + 55px);
+        transition: background-color $transition_theme, left $nav_mobile_delay $transition_nav, opacity $nav_mobile_delay $transition_nav;
     }
     
     @include respond-to(xs) {
         transform: scale(0.7);
     }
     
-    
+    &.scrolled {
+        left: -70px;
+
+        @include respond-to(sm) {
+            left: 25%;
+        }
+    }
     
     &.hide {
         @include respond-to(sm) {
