--- a/src/components/ThemeSwitcher/themeSwitcher.scss
+++ b/src/components/ThemeSwitcher/themeSwitcher.scss
@@ -4,23 +4,33 @@
 
 .theme-switcher__container {
     position: fixed;
-    right: 20px;
+    left: 20px;
     top: 100px;
     width: 70px;
     height: 40px;
     overflow: hidden;
     z-index: 5500;
-    transition: background-color $transition_theme, right $nav_mobile_delay $transition_nav, opacity $nav_mobile_delay $transition_nav;
+    transition: background-color $transition_theme, left $nav_mobile_delay, right $nav_mobile_delay, opacity $nav_mobile_delay;
 
-    
     @include respond-to(sm) {
         transform: scale(0.85);
         top: calc($header_height + 55px);
         right: 25%;
+        left: initial;
+        transition: background-color $transition_theme, left $nav_mobile_delay $transition_nav, right $nav_mobile_delay $transition_nav, opacity $nav_mobile_delay $transition_nav;
     }
     
     @include respond-to(xs) {
         transform: scale(0.7);
+    }
+
+    &.scrolled {
+        left: -70px;
+
+        @include respond-to(sm) {
+            right: 25%;
+            left: initial
+        }
     }
 
     &.hide {
@@ -30,6 +40,9 @@
             transition: background-color $transition_theme, right $nav_mobile_delay, opacity $nav_mobile_delay;
         }
     }
+
+
+
 
     & input {
         visibility: hidden;
