--- a/src/partials/Nav/nav.scss
+++ b/src/partials/Nav/nav.scss
@@ -48,7 +48,7 @@ $gap_to_text: 5px;
                 position: relative;
 
                 @include respond-to(md) {
-                    font-size: 1.2rem;
+                    font-size: 1rem;
                 }
 
                 &::before, &::after {
@@ -80,6 +80,7 @@ $gap_to_text: 5px;
                     transition: all $transition_subMenu;
                     display: block;
                     font-weight: 700;
+                    cursor: pointer;
 
                     &::before, &::after {
                         content: '';
@@ -155,6 +156,8 @@ $gap_to_text: 5px;
                                 display: block;
                                 white-space: nowrap;
                                 text-align: center;
+                                cursor: pointer;
+
                                 /*transform: scaleX(0);
                                 transition: transform $transition_subMenu 0s;*/
 
@@ -217,6 +220,15 @@ $gap_to_text: 5px;
 
         
                     }
+
+                }
+
+
+                &.user {
+                    max-width: 40px;
+                    height: 40px;
+                    border-radius: 20px;
+                    border: 2px solid var(--main_vv);
 
                 }
 
