--- a/src/components/UserBlock/user-block.scss
+++ b/src/components/UserBlock/user-block.scss
@@ -78,7 +78,7 @@
 
 
 
-
+/*
     &.autorized {
         max-width: fit-content;
         overflow: visible;
@@ -108,6 +108,6 @@
             }
         }
     }
-
+*/
 
 }
