--- a/src/pages/Admin/news-creator.scss
+++ b/src/pages/Admin/news-creator.scss
@@ -5,51 +5,80 @@
 
     & form {
         margin-top: 70px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
         gap: 30px 40px;
 
-        & h3 {
-            text-align: center;
-            margin-left: 150px;
+
+        & .input-block, .input-block_header {
+            display: grid;
+            grid-template-columns: 150px 1fr 1fr;
+            gap: 10px 20px;
+            margin-top: 30px;
+
+
+
             @include respond-to(md) {
-                display: none;
+                grid-template-columns: 150px 1fr;
+                border-bottom: 1px solid var(--main_vv);
+                margin-top: 30px;
+                padding-bottom: 35px;
+
+                &:nth-of-type(5) {
+                    border-bottom: none;
+                }
             }
-        }
 
-        @include respond-to(md) {
-            grid-template-columns: 1fr; 
-        }
+            @include respond-to(xs) {
+                grid-template-columns: 1fr;
+            }
 
-        & .input-item {
-            display: flex;
-            width: 100%;
-            justify-content: space-between;
-            align-items: stretch;
+            & span, h3 {
+                text-align: center;
+            }
+
+
+
 
             & label {
                 min-width: 160px;
                 align-self: center;
                 white-space: nowrap;
+                font-size: 18px;
+
+                @include respond-to(md) {
+                    grid-row-start: 1;
+                    grid-row-end: 3;
+                }
             }
-            
-            & input, textarea {
-                color: $black;
-                margin-left: 20px;
-                width: 100%;
-                font-size: 20px;
-                font-weight: 600;
-                padding: 5px 10px;
-                border-radius: 4px;
-                background-color: var(--inputs-bg);
-                transition: background-color 1s, border 1s;
-                outline: none;
-                border: 2px solid transparent;
+
+
+            .input__wrapper {
+                position: relative;
+                &::before {
+                    @include respond-to(md) {
+                        font-size: 14px;
+                        content: 'EN';
+                        position: relative; 
+                        left: 0%;
+                        top: 0px;
+                        transform: translate(0, -50%);
+                    }   
+                }
+
+                &:nth-of-type(2)::before {
+                    @include respond-to(md) {
+                        content: 'RU';
+                    }
+                }
             }
-            
-            & textarea {
-                resize: vertical;
-                
+
+        }
+
+
+
+
+        & .input-block_header {
+            @include respond-to(md) {
+                display: none;
             }
         }
 
@@ -60,6 +89,127 @@
             &:disabled {
                 opacity: 0.4;
             }
+        }
+
+        & .full-width {
+            grid-column: 1 / -1;
+
+            
+            @include respond-to(md) {
+                grid-column: 1 / -1;
+
+            }
+        }
+
+
+
+        & .images {
+
+            &__header {
+                text-align: center;
+                margin-left: 0;
+                margin-top: 50px;
+            }
+        
+
+        
+            & .image-block, .image-block_header {
+                display: grid;
+                grid-template-columns: 2fr 1fr 1fr 40px;
+                gap: 20px 40px;
+                position: relative;
+                margin-top: 15px;
+
+
+
+                span {
+                    text-align: center;
+                }
+                
+                @include respond-to(md) {
+                    grid-template-columns: 1fr 1fr 40px;
+                    gap: 20px 20px;
+                    border-bottom: 1px solid var(--main_vv);
+                    padding-bottom: 20px;
+
+                    &:last-child {
+                        border-bottom: none;
+                    }
+
+                    & .input__wrapper {
+
+                        &::before {
+                            position: relative;
+                            left: 0;
+                            top: 0;
+    
+    
+                        }
+                        &:nth-of-type(1)::before {
+                            content: 'URL';
+                        }
+                        &:nth-of-type(2)::before {
+                            content: 'EN';
+                        }
+                        &:nth-of-type(3)::before {
+                            content: 'RU';
+                        }
+                    }
+
+
+                    & .input__wrapper:nth-of-type(1) {
+                        grid-column: 1 / -1;
+                    }
+                }
+                
+
+
+                & .del {
+                    margin-top: 0;
+                    padding-left: 10px;
+                    padding-right: 10px;
+                    align-self: self-end;
+                    justify-self: end;
+                }
+            }
+
+            & .image-block_header {
+
+                @include respond-to(md) {
+                    display: none;
+                }
+            }
+
+
+        }
+
+        & .add {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+
+        & .post {
+            margin-left: auto;
+        }
+
+
+
+        & input, textarea {
+            color: $black;
+            width: 100%;
+            font-size: 20px;
+            font-weight: 600;
+            padding: 5px 10px;
+            border-radius: 4px;
+            background-color: var(--inputs-bg);
+            transition: background-color 1s, border 1s;
+            outline: none;
+            border: 2px solid transparent;
+            position: relative;
+        }
+        
+        & textarea {
+            resize: vertical;
         }
 
     }
