components changed to new state

--- a/src/components/CatalogList/catalog-list.scss
+++ b/src/components/CatalogList/catalog-list.scss
@@ -2,7 +2,7 @@
 @use "/src/assets/css/variables" as *;
 //@import '../../../assets/css/base.scss';
 
-.categories-list__container {
+.catalog-list__container {
     display: flex;
     align-items: center;
     margin-right: 4%;
