--- a/src/components/ThemeSwitcher/themeSwitcher.scss
+++ b/src/components/ThemeSwitcher/themeSwitcher.scss
@@ -4,7 +4,7 @@
 
 .theme-switcher__container {
     position: fixed;
-    left: 20px;
+    right: 20px;
     top: 100px;
     width: 70px;
     height: 40px;
@@ -16,7 +16,7 @@
         transform: scale(0.85);
         top: calc($header_height + 55px);
         right: 25%;
-        left: initial;
+        //left: initial;
         transition: background-color $transition_theme, left $nav_mobile_delay $transition_nav, right $nav_mobile_delay $transition_nav, opacity $nav_mobile_delay $transition_nav;
     }
     
@@ -25,7 +25,7 @@
     }
 
     &.scrolled {
-        left: -70px;
+        right: -70px;
 
         @include respond-to(sm) {
             right: 25%;
