--- a/src/pages/NewsDetails/news-details.scss
+++ b/src/pages/NewsDetails/news-details.scss
@@ -26,6 +26,7 @@
             margin-top: 50px;
             height: 400px;
             width: 100%;
+            overflow: hidden;
 
             @include respond-to(md) {
                 height: 350px;
@@ -37,6 +38,23 @@
 
             @include respond-to(xs) {
                 height: 60vw;
+            }
+
+            & > img {
+                width: 100%;
+                height: 100%;
+                margin-left: auto;
+                margin-right: auto;
+                object-fit: contain;
+            }
+
+            & .splider_common__wrapper {
+                & .splide__slide  {
+                    & .splide__slide-container {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
             }
         }
 
