--- a/src/components/Delete/delete.scss
+++ b/src/components/Delete/delete.scss
@@ -9,6 +9,7 @@
     width: 100%;
     height: 100%;
     //height: 100%;
+    position: relative;
 
     & svg {
         top: 0;
@@ -16,6 +17,8 @@
         fill: var(--text);
         position: absolute;
         transition: transform $transition_fast;
+        height: 100%;
+        width: 100%;
     }
 
     &:hover {
