--- a/src/pages/NewsDetails/news-details.scss
+++ b/src/pages/NewsDetails/news-details.scss
@@ -62,10 +62,19 @@
     }
     
     
-    button.button_back {
+    & .buttons {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
         margin-top: 50px;
-        margin-left: auto;
-        margin-right: auto;
+
+
+        & > .button_delete__container {
+            width: 30px;
+            height: 30px;
+            margin-left: 30px;
+        }
     }
 
 
